--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 0-Prerequisites
 3-AWSCloudLiftAndShift/Prod_Key_PRJ3.pem
 3-AWSCloudLiftAndShift/s3admin_accessKeys.csv
-3-AWSCloudLiftAndShift/LiftandShiftProject.docx
+3-AWSCloudLiftAndShift/*.docx
