--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 0-Prerequisites
-5-ContainerizationofJavaProject/Prod_Key_PRJ3.pem
-5-ContainerizationofJavaProject\Prod_Key_PRJ3-1.pem
-C:\Users\ozgun\DevOps_Projects\5-ContainerizationofJavaProject\Prod_Key_PRJ3-2.pem
+*.pem
+git rm --cached 5-ContainerizationofJavaProject/Prod_Key_PRJ3-2.pem
+git rm --cached 5-ContainerizationofJavaProject/Prod_Key_PRJ3-1.pem
